--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Pulse</title>
 </head>
 <body>
-    <section class="promo">
+    <section class="promo" id="up">
         <div class="container">
             <header class="header">
                 <a href="" class="header__logo">
@@ -73,7 +70,7 @@
             <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" placeholder="Ваше имя" required type="text">
-                <input name="phone" placeholder="Ваш телефон" required type="tel">
+                <input name="phone" placeholder="Ваш телефон" required>
                 <input name="email" placeholder="Ваш E-mail" required type="email">
 
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -332,6 +329,35 @@
             </div>
         </div>
     </section>
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__wrapper animate__animated animate__fadeInUp wow fadeInUp" data-wow-duration="2s">
+                <img src="img/reviews/review-1.png" alt="review-1" class="reviews__img">
+                <div class="reviews__descr">
+                    <div class="reviews__name">Ирина Иванченко</div>
+                    <div class="reviews__achieve">2 полумарафона</div>
+                    <div class="reviews__text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. <br>Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br><br>Спасибо, RunSmart!</div>
+                </div>
+            </div>
+            <div class="reviews__wrapper animate__animated animate__fadeInUp wow fadeInUp" data-wow-duration="2s">
+                <img src="img/reviews/review-2.png" alt="review-2" class="reviews__img">
+                <div class="reviews__descr">
+                    <div class="reviews__name">Иван Сёмочкин</div>
+                    <div class="reviews__achieve">1 полумарафон</div>
+                    <div class="reviews__text">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                </div>
+            </div>
+            <div class="reviews__wrapper animate__animated animate__fadeInUp wow fadeInUp" data-wow-duration="2s">
+                <img src="img/reviews/review-3.png" alt="review-3" class="reviews__img">
+                <div class="reviews__descr">
+                    <div class="reviews__name">Юлия Дашкина</div>
+                    <div class="reviews__achieve">2 полумарафона</div>
+                    <div class="reviews__text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.<br><br>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>Спасибо!!!</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <iframe width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.406418376491!2d37.64279623578181!3d55.768812936043375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a6342a6010d%3A0x6b0f4771a8aa70a2!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDMsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMDcwNzg!5e0!3m2!1sru!2sua!4v1666002061078!5m2!1sru!2sua"></iframe>
         <div class="footer__info">
@@ -351,7 +377,7 @@
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="tel">
+                <input name="phone" placeholder="Ваш телефон">
                 <input name="email" placeholder="Ваш E-mail" type="email">
 
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
@@ -364,7 +390,7 @@
             <div class="modal__descr">Пульсометр Polar FT2</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" placeholder="Ваше имя" required type="text">
-                <input name="phone" placeholder="Ваш телефон" required type="tel">
+                <input name="phone" placeholder="Ваш телефон" required>
                 <input name="email" placeholder="Ваш E-mail" required type="email">
 
                 <button class="button button_submit">Купить</button>
@@ -378,11 +404,15 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script> -->
+    <a href="#up" class="pageup"><img src="img/icons/chevron-up-solid.svg" alt="up"></a>
+
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <!-- <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
