--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.png" />
     <title>Pulse</title>
   </head>
   <body>
@@ -103,17 +104,21 @@
         </form>
       </div>
     </section>
-    <section class="carousel">
+    <div class="carousel">
       <div class="container">
         <div class="carousel__inner">
           <div><img src="./img/carousel/carousel-1.png" alt="" /></div>
           <div><img src="./img/carousel/carousel-2.jpg" alt="" /></div>
           <div><img src="./img/carousel/carousel-3.jpg" alt="" /></div>
         </div>
-        <button type="button" class="prev"><img src="./img/carousel/left-arrow.svg" /></button>
-        <button type="button" class="next"><img src="./img/carousel/right-arrow.svg" /></button>
+        <button type="button" class="prev">
+          <img src="./img/carousel/left-arrow.svg" alt="left arrow icon" />
+        </button>
+        <button type="button" class="next">
+          <img src="./img/carousel/right-arrow.svg" alt="right arrow icon" />
+        </button>
       </div>
-    </section>
+    </div>
     <section id="catalog" class="catalog">
       <div class="container">
         <h2 class="title">Каталог пульсометров</h2>
@@ -133,15 +138,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -162,15 +169,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -191,15 +200,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -220,15 +231,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -249,15 +262,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -278,15 +293,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -309,15 +326,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -340,15 +359,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -369,15 +390,17 @@
                 </div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <ul class="catalog-item__list">
-                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                <li>
-                  Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
-                </li>
-                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+              <div class="catalog-item__benefits">
+                <ul class="catalog-item__benefits-list">
+                  <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                  <li>
+                    Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                  </li>
+                  <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                  <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                </ul>
                 <a href="#" class="catalog-item__back">назад</a>
-              </ul>
+              </div>
             </div>
             <hr />
             <div class="catalog-item__footer">
@@ -448,10 +471,8 @@
     </section>
     <footer class="footer">
       <iframe
+        class="footer__map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.2479062089997!2d30.487278496267447!3d50.43648287574927!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ceec7aab22d5%3A0x706ccb85e5fc7a53!2z0YPQuy4g0JLQsNGB0LjQu9C40Y8g0JvQuNC_0LrQvtCy0YHQutC-0LPQviwgMTbQkSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1691314426858!5m2!1sru!2sua"
-        width="100%"
-        height="800"
-        style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
